deployment/k8s/2-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: devzone-postgres-svc
spec:
  selector:
    app: devzone-postgres-pod
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devzone-postgres-deployment
spec:
  selector:
    matchLabels:
      app: devzone-postgres-pod
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: devzone-postgres-pod
    spec:
      containers:
        - name: postgres
          image: "postgres:17-alpine"
          ports:
            - name: postgres
              containerPort: 5432
          readinessProbe:
            tcpSocket:
              port: 5432
            #exec:
            #  command: [ "psql", "-w", "-U", "siva", "-d", "postgres", "-c", "SELECT 1" ]
            initialDelaySeconds: 15
            timeoutSeconds: 2
          livenessProbe:
            tcpSocket:
              port: 5432
            #exec:
            #  command: [ "psql", "-w", "-U", "siva", "-d", "postgres", "-c", "SELECT 1" ]
            initialDelaySeconds: 45
            timeoutSeconds: 2
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pv-claim
